added some pictures and updated the prices

--- a/index.html
+++ b/index.html
@@ -210,10 +210,11 @@
         <li><a href="#gallery">GALLERY</a></li>
         <li><a href="#menu">MENU</a></li>
         <li><a href="#contact">CONTACT</a></li>
+        <li  type="button"  data-toggle="modal" data-target="#exampleModalCenter"><a href="#register">REGISTER</a></li>
         <li>      <!-- Button trigger modal -->
-          <button type="button"  data-toggle="modal" data-target="#exampleModalCenter">
+          <!-- <button type="button"  data-toggle="modal" data-target="#exampleModalCenter">
             REGISTER/SIGNUP
-          </button>
+          </button> -->
           
           <!-- Modal -->
           <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -393,69 +394,87 @@
 <div id="menu" class="container-fluid">
   <div class="text-center">
     <h2>Menu</h2>
-    <h4>Order</h4>
+    <h4>Price List</h4>
   </div>
   <div class="row slideanim">
-    <div class="col-sm-4 col-xs-12">
+    <div class="col-sm-3 col-xs-12">
       <div class="panel panel-default text-center">
         <div class="panel-heading">
           <h1>Basic</h1>
         </div>
         <div class="panel-body">
-                <img src="./admin/image/img2.jpg" width="300px" height="250px" alt="...">
-          <!-- <p><strong>20</strong> Lorem</p>
-          <p><strong>15</strong> Ipsum</p>
-          <p><strong>5</strong> Dolor</p>
-          <p><strong>2</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p> -->
+          <p><strong>Abacha</strong></p>
+          <p><strong>1</strong> Fish</p>
+          <p><strong>1</strong> Portion of cowskin</p>
+          <p><strong>1</strong> Portion of ugba</p>
+          <p> Veggies</p> 
         </div>
         <div class="panel-footer">
-          <h3>$19</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+          <h3><strike>N</strike> 2,500</h3>
+          <h4>per head</h4>
+          <button class="btn btn-lg">Order</button>
         </div>
       </div>      
     </div>     
-    <div class="col-sm-4 col-xs-12">
+    <div class="col-sm-3 col-xs-12">
       <div class="panel panel-default text-center">
         <div class="panel-heading">
           <h1>Pro</h1>
         </div>
         <div class="panel-body">
-          <p><strong>50</strong> Lorem</p>
-          <p><strong>25</strong> Ipsum</p>
-          <p><strong>10</strong> Dolor</p>
-          <p><strong>5</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
+          <p><strong>Abacha</strong></p>
+          <p><strong>1</strong> Fish</p>
+          <p><strong>1</strong> Portion of cowhead</p>
+          <p><strong>One</strong> Portion of ugba</p>
+          <p><strong></strong> Veggies</p>
         </div>
         <div class="panel-footer">
           <h3>$29</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+          <h4>per head</h4>
+          <button class="btn btn-lg">Order</button>
         </div>
       </div>      
     </div>       
-    <div class="col-sm-4 col-xs-12">
+    <div class="col-sm-3 col-xs-12">
       <div class="panel panel-default text-center">
         <div class="panel-heading">
           <h1>Premium</h1>
         </div>
         <div class="panel-body">
-          <p><strong>100</strong> Lorem</p>
-          <p><strong>50</strong> Ipsum</p>
-          <p><strong>25</strong> Dolor</p>
-          <p><strong>10</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
+          <p><strong>Abacha</strong></p>
+          <p><strong>2</strong> Fish</p>
+          <p><strong>1</strong> Portion of cowleg or cowskin</p>
+          <p><strong>1</strong> Portion of ugba/stockfish</p>
+          <p> Veggies</p>
         </div>
         <div class="panel-footer">
-          <h3> <strike>N</strike> 49</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
+          <h3> <strike>N</strike> 4,000</h3>
+          <h4>per head</h4>
+          <button class="btn btn-lg">Order</button>
         </div>
       </div>      
-    </div>    
+    </div>
+    <div class="row slideanim">
+        <div class="col-sm-3 col-xs-12">
+          <div class="panel panel-default text-center">
+            <div class="panel-heading">
+              <h1>Ugba</h1>
+            </div>
+            <div class="panel-body" style="height: 213px;">
+              <p><strong>Ugba</strong></p>
+              <p><strong>1</strong> Fish or stockfish</p>
+              <p><strong>1</strong> Portion of cowskin</p>
+              <p> Veggies</p> 
+            </div>
+            <div class="panel-footer">
+              <h3><strike>N</strike> 2,000</h3>
+              <h4>per head</h4>
+              <button class="btn btn-lg">Order</button>
+            </div>
+          </div>      
+        </div>       
   </div>
-</div>
+  </div>
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
